...
                            Text(text = stringResource(R.string.drawerTitle), modifier = Modifier.padding(16.dp))
                            GlideImage(model = R.drawable.rocket_up, contentDescription = "rocket_up")
                            Divider()}

                        item{
                            NavigationDrawerItem(
                                label = { Text(text = "Home") },
                                selected = false,
                                onClick = {
                                    scope.launch {
                                        drawerState.apply {
                                            if (isOpen) close() else open()
                                        }
...
